2004-05-27  Paul Gatille  <pge@xanadu>

	* src/Scalars/Raw.c: changed ctor to allow creating empty object
	- added Raw_getData / Raw_setData

2004-05-24  Paul Gatille  <pge@xanadu>

        * various: 
	- added tb_Compare (tb_Object_t virtual method)
	- refactored tb_Stringify to return new String_t (avoid juggling with internal representations of objects and such bogosities)
	- fixed constructors for hash, vector and dict (to allow derivation)
	
2004-05-14  Paul Gatille  <pge@xanadu>

	* src/Objects/Objects.c: 
	+ new tb_Object class method : tb_Stringify (deep serialisation similar to tb_Marshall, but much liter)

	* src/Containers/Vector.c: 
	removed tb_valid tests from overloaded functions (as type checking will have already been done)

2004-05-14  Paul Gatille  <pol@xenic>

	* src/Scalars/Date.c 
	Started to add Date_t class. Some methods are still needed (mainly un/marshalling for xmlrpc).

2004-05-11  Paul Gatille  <pge@xanadu>

	* <internal change only (should be no API disruption) >
	+ reworked tb_Object internals to allow full member inheritance : created new 'members' struct containing specific members of class instance ; and a pointer to is direct anscestor's members.
	+ removed tb_Object_t->size, tb_Object_t->data, tb_Object_t->extra (equivalent or replacement inside members structure now)
	+ fixed tb_getSize to be a derivable function implemented by classe
	+ evolved new_class.pl accordingly
	
	+ add 'tb_' prefix to all memory wrappers (xmalloc, xcalloc, xrealloc and xfree) to fix a name clash with some gnu libs (including readline)

2002-09-03  Paul L. Gatille  <pol@xanadu.dev33.cvf>

	* modules/tb_db/Structure/db_Operation.c: 
	+ deep re-work of evaluer. more progress to come (hopefully)
	- not yet functional

	* src/Containers/Containers.c: 
	+ tb_Find(Container_t, tb_Key_t) : return iterator on first elem matching key. (proto may 
	change soon)
	

2002-08-29  Paul L. Gatille  <pol@xanadu.dev33.cvf>
