@@ -1,3 +1,8 @@
+2004-06-02  Paul Gatille  <pge@xanadu>
+
+	* src/Memory/fastmem.c: 
+	fix BIG deadlock in fm_realloc 
+
 2004-05-27  Paul Gatille  <pge@xanadu>
 
 	* src/Scalars/Raw.c: changed ctor to allow creating empty object
